Fixing navbar, encounter card, encounter drawer, encounter details dark mode styling

--- a/forgettable-frontend/src/colours.css
+++ b/forgettable-frontend/src/colours.css
@@ -12,6 +12,7 @@
     --bord: #CACACA; /* border for when a lighter card is on top of a darker card */
     --warn: #E05A33; /* warning text */
     --line: #E5E5E5;
+    --btnb: #000000;
 
     /* filter values of colours for SVGs */
     --fprmry: invert(88%) sepia(54%) saturate(487%) hue-rotate(320deg) brightness(101%) contrast(91%); /* main accent */
@@ -52,6 +53,7 @@
     --txt4: #BABABA; /* grey text */
     --bord: #3A3A3A; /* border for when a lighter card is on top of a darker card */
     --line: #5A5A5A;
+    --btnb: #BABABA;
     /* filter values of colours for SVGs */
     --ficon: invert(83%) sepia(0%) saturate(538%) hue-rotate(185deg) brightness(90%) contrast(94%); /* navbar icons */
   }
