--- a/forgettable-frontend/src/components/CustomButton/CustomButton.module.css
+++ b/forgettable-frontend/src/components/CustomButton/CustomButton.module.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border:2px solid black;
+    border:2px solid var(--btnb);
     border-radius: var(--radius-btn);
     padding: 0 15px 0 15px;
     box-sizing: border-box;
@@ -13,15 +13,15 @@
     height: 40px;
     cursor: pointer;
     user-select: none;
-    background-color: var(--bkgd);
-}
-
-.Button:hover{
     background-color: var(--hilit);
 }
 
+.Button:hover{
+    background-color: var(--bkgd);
+}
+
 .Text{
-    color: black;
+    color: var(--txt1);
     font-size: 18px;
     line-height: 0px;
     font-family: 'Poppins', sans-serif;
