--- a/forgettable-frontend/src/components/CustomModal/CustomModal.module.css
+++ b/forgettable-frontend/src/components/CustomModal/CustomModal.module.css
@@ -9,7 +9,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: var(--card);
     border-radius: 13px;
     display: flex;
     flex-direction: column;
